Opprettet DBCustomer-klasse med add og kommentert delete-klasse Totalendret createUser.cshtml til bruk av html-helpers. Justert endringer i Customers.cs

--- a/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/createUser.cshtml
@@ -11,89 +11,76 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>User</legend>
+        <legend>Brukerregistrering</legend>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.firstName)
         </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.firstName)
+            @Html.ValidationMessageFor(model => model.firstName)
+        </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.lastName)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.lastName)
+            @Html.ValidationMessageFor(model => model.firstName)
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.email)
         </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.email)
+            @Html.ValidationMessageFor(model => model.firstName)
+        </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.phone)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.phone)
+            @Html.ValidationMessageFor(model => model.phone)
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.adress)
         </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.adress)
+            @Html.ValidationMessageFor(model => model.adress)
+        </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.zipCode)
         </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.province)
+        <div class="editor-field">
+            @Html.EditorFor(model => model.zipCode)
+            @Html.ValidationMessageFor(model => model.zipCode)
+            @Html.EditorFor(model => model.province)
+            @Html.ValidationMessageFor(model => model.province)
         </div>
+       
         <div class="editor-label">
             @Html.LabelFor(model => model.payAdress)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.payAdress)
+            @Html.ValidationMessageFor(model => model.payAdress)
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.payZipcode)
         </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.payProvince)
+        <div class="editor-field">
+            @Html.EditorFor(model => model.payZipcode)
+            @Html.ValidationMessageFor(model => model.payZipcode)
+            @Html.EditorFor(model => model.payProvince)
+            @Html.ValidationMessageFor(model => model.payProvince)
         </div>
+  
         <p>
-            <input type="submit" value="createUser" />
+            <input type="submit" value="Opprett bruker" />
         </p>
         
     </fieldset>
 }   
 
-        //Gammel metode
-        <h2>Opprett bruker:</h2>
-        <form action="/User/createUser" method="post">
-            <table>
-                <tr>
-                    <td>Fornavn: </td>
-                    <td><input type="text" name="firstname"/></td><
-                </tr>
-                <tr>
-                    <td>Etternavn: </td>
-                    <td><input type="text" name="surname"/></td>
-                </tr>
-                <tr>
-                    <td>E-post: </td>
-                    <td><input type="text" name="email"/></td>
-                </tr>
-                <tr>
-                    <td>Cellphone: </td>
-                    <td><input type="text" name="cellphone"/></td>
-                </tr>
-                <tr>
-                    <td>Hjemmeadresse: </td>
-                    <td><input type="text" name="adress"/></td></tr>
-                <tr>
-                    <td>Postnr: </td>
-                    <td><input type="text" name="zipcode"/></td>
-                    <td>Poststed: </td>
-                    <td><input type="text" name="province"/></td>
-                </tr>
-                <tr>
-                    <td>Betalingsadresse: </td>
-                    <td><input type="text" name="payAdress"/></td>
-                </tr>
-                <tr>
-                    <td>Postnr: </td>
-                    <td><input type="text" name="payZipcode" /></td>
-                    <td>Poststed: </td>
-                    <td><input type="text" name="payProvince"/></td>
-                </tr>
-            </table>
-            @Html.ActionLink("Opprett bruker", "CreateUser")
-        </form>
-    </div>
-</body>
-</html>
-
+     
 
