--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Kaffeplaneten", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })           
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -25,12 +25,17 @@
             </div>
         </div>
     </div>
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="">Home</a></li>
+        <li role="presentation"><a href="">Register</a></li>
+        <li role="presentation"><a href="">Sign in</a></li>
+    </ul>
 
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Kaffeplaneten</p>
         </footer>
     </div>
 
