--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -27,7 +27,10 @@
     </div>
     <ul class="nav nav-tabs">
         <li role="presentation" class="active"><a href="">Home</a></li>
-        <li role="presentation"><a href="">Register</a></li>
+        <li role="presentation">
+            @Html.ActionLink("Registrer", "createUser", "user", new { area = "" }, new { @class = "navbar-brand" })
+        </li>
+
         <li role="presentation"><a href="">Sign in</a></li>
     </ul>
 
