--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model List<Kaffeplaneten.Products>
+
 @{
     ViewBag.Title = "Products";
 }
@@ -13,20 +13,21 @@
     <title>ListAllProducts</title>
 </head>
 <body>
-        @foreach (var product in Model)
-        {
+        
+       
             <div class="collum">
                 <div class="col-sm-6 col-md-4">
                     <div class="thumbnail">
-                        <img src="~/Content/@product.imageURL" alt="ProductImage" style="width:150px;height:150px">
+                        <img src="~/Content/" alt="ProductImage" style="width:150px;height:150px">
                         <div class="caption">
-                            <h3>@product.productName</h3>
-                            <p>@product.description</p>
+                            <h3></h3>
+                           
+                            <p></p>
                             <p><a href="#" class="btn btn-primary" role="button">Info</a> <a href="#" class="btn btn-default" role="button"><span class="glyphicon glyphicon-shopping-cart"></span></a></p>
                         </div>
                     </div>
                 </div>
             </div>
-        }
+        
 </body>
 </html>
