--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Kaffeplaneten", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })           
+                <span @Html.ActionLink("Kaffeplaneten", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })>Home</span>           
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -26,9 +26,10 @@
         </div>
     </div>
     <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="">Home</a></li>
-        <li role="presentation"><a href="">Register</a></li>
-        <li role="presentation"><a href="">Sign in</a></li>
+        <li role="presentation" class="active">@Html.ActionLink("Kaffeplaneten", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
+        <li role="presentation"> @Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
+        <li role="presentation"> @Html.ActionLink("Logg inn", "Loginview", "User", new { area = "" }, new { @class = "navbar-brand" }) </li>
+        <li role="presentation"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "Order", new { area = "" }, new { @class = "navbar-brand" })</li>
     </ul>
 
     <div class="container body-content">
