--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Kaffeplaneten.Models.ProductModel>
 
 @{
     ViewBag.Title = "Products";
@@ -13,21 +13,54 @@
     <title>ListAllProducts</title>
 </head>
 <body>
-        
-       
+
+ 
+
+    <div class="container"
+        <div class="row">
+            @foreach (var product in Model)
+            {
+
             <div class="collum">
-                <div class="col-sm-6 col-md-4">
+
+                <div class="col-sm-6 col-md-6">
                     <div class="thumbnail">
-                        <img src="~/Content/" alt="ProductImage" style="width:150px;height:150px">
+                        <img img src="~/Content/@product.imageURL" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
                         <div class="caption">
-                            <h3></h3>
-                           
-                            <p></p>
-                            <p><a href="#" class="btn btn-primary" role="button">Info</a> <a href="#" class="btn btn-default" role="button"><span class="glyphicon glyphicon-shopping-cart"></span></a></p>
+                            <h3>@product.productName</h3>
+                            <p>@product.description</p>
+
                         </div>
+                        @Html.ActionLink("Detaljer", "ProductDetailsView", new { id = product.productID }, new { @class = "btn btn-primary" })
+                        @Html.ActionLink("Kjøp", "ProductDetailsView", new { id = product.productID }, new { @class = "btn btn-primary" })
                     </div>
+                </div>        
+            </div>
+            }
+        </div>
+    </div>
+
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Kaffetittel</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Fikse dette her vett, detta er kult</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
-        
+
+        </div>
+    </div>
+
+
 </body>
 </html>
+
