--- a/Kaffeplaneten/Kaffeplaneten/Views/Aarder/ShoppingCartView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Aarder/ShoppingCartView.cshtml
@@ -4,7 +4,7 @@
     ShoppingCart currentCart = (ShoppingCart)HttpContext.Current.Session["ShoppingCart"];
 
     // -------------- TESTING SHIT -----------------------------
-    ProductModel testProdukt = new ProductModel();
+    Products testProdukt = new Products();
     testProdukt.productID = 0;
     testProdukt.productName = "TestProdukt";
     testProdukt.description = "Hei, jeg er et test!";
