--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/ShoppingCartView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/ShoppingCartView.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿@using Kaffeplaneten.Models;
+@using Kaffeplaneten;
+@{
     ViewBag.Title = "ShoppingCartView";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ShoppingCart currentCart = (ShoppingCart)HttpContext.Current.Session["ShoppingCart"];
 
-    // -------------- TESTING SHIT -----------------------------
+    // -------------- TESTING SHIT ----------------------------
     Products testProdukt = new Products();
     testProdukt.productID = 0;
     testProdukt.productName = "TestProdukt";
@@ -57,20 +59,20 @@
                             </td>
                             <td data-th="Subtotal" class="text-center">@((items.product.price)*(items.Quanitity))</td>
                             <td class="actions" data-th="">
-                                <button class="btn btn-info btn-sm"><i class="fa fa-refresh"></i></button>
-                                <button class="btn btn-danger btn-sm"><i class="fa fa-trash-o"></i></button>
+                                <button class="btn btn-info btn-sm"><i class="glyphicon-refresh"></i></button>
+                                <button class="btn btn-danger btn-sm"><i class="glyphicon-trash"></i></button>
                             </td>
                         </tr>
                     }
                 </tbody>
                 <tfoot>
                     <tr class="visible-xs">
-                        <td class="text-center"><strong>@currentCart.calculateShoppingCartTotal()</strong></td>
+                        <td class="text-center"><strong>@currentCart.calculateTotal()</strong></td>
                     </tr>
                     <tr>
                         <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i>Continue Shopping</a></td>
                         <td colspan="2" class="hidden-xs"></td>
-                        <td class="hidden-xs text-center"><strong>Total: @currentCart.calculateShoppingCartTotal()</strong></td>
+                        <td class="hidden-xs text-center"><strong>Total: @currentCart.calculateTotal()</strong></td>
                         <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
                     </tr>
                 </tfoot>
