Ryddet litt, lagt til manglende bootstrap fil

--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -4,19 +4,7 @@
     ViewBag.Title = "Products";
 }
 
-<h2>AllProductsView</h2>
-
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>ListAllProducts</title>
-</head>
-<body>
-
- 
-
-    <div class="container"
+    <div class="container">
         <div class="row">
             @foreach (var product in Model)
             {
@@ -59,8 +47,4 @@
 
         </div>
     </div>
-
-
-</body>
-</html>
 
