UserController oppdatert med metoder for endring av brukerdata. Bug fix/skrivefeil i AdressModel. Lagt til konstruktør i OrderModel. Oppdatert accountView. Lagt til editAccountView. DBCustomer oppdatert med metoder for endring av brukerdata. Bug fix i DBOrder. TestingClass ryddet og oppgradert. Slett databasen etter denne. Liten endring i hvordan adresser lagres.

--- a/Kaffeplaneten/Kaffeplaneten/Views/User/accountView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/accountView.cshtml
@@ -47,4 +47,6 @@
         @Html.DisplayFor(model => model.payZipcode)
     </div>
 
+    @Html.ActionLink("Endre", "editAccountView", "User", new { area = "" }, new { @class = "btn btn-success" })
+
 </fieldset>
