Fikset hele loginviewet Fikset alle regulæreuttrykk Lagt til findCostumer Generelt gjort JÆVLIG mye

--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <ul class="nav nav-tabs">
         <li role="presentation" class="active">@Html.ActionLink("Kaffeplaneten", "AllProducts", "Product", new { area = "" }, new { @class = "navbar-brand" })</li>
         <li role="presentation"> @Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
-        <li role="presentation"> @Html.ActionLink("Logg inn", "Loginview", "User", new { area = "" }, new { @class = "navbar-brand" }) </li>
+        <li role="presentation"> @Html.ActionLink("Logg inn", "Loginview", "Security", new { area = "" }, new { @class = "navbar-brand" }) </li>
         <li role="presentation"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "Order", new { area = "" }, new { @class = "navbar-brand" })</li>
     </ul>
 
