kontoinstillinger lagt til i layout

--- a/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
         <li role="presentation"> @Html.ActionLink("Registrer", "createUser", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
         <li role="presentation"> @Html.ActionLink("Logg inn", "Loginview", "Security", new { area = "" }, new { @class = "navbar-brand" }) </li>
         <li role="presentation"> @Html.ActionLink("Handlekurv", "ShoppingCartView", "Order", new { area = "" }, new { @class = "navbar-brand" })</li>
+        <li role="presentation"> @Html.ActionLink("Kontoinstillinger", "accountView", "User", new { area = "" }, new { @class = "navbar-brand" })</li>
     </ul>
 <body>
     <div class="container body-content">
