--- a/Kaffeplaneten/Kaffeplaneten/Views/User/accountView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/accountView.cshtml
@@ -48,5 +48,6 @@
     </div>
 
     @Html.ActionLink("Endre", "editAccountView", "User", new { area = "" }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Se ordrehistorie", "orderHistoryView", "User", new { area = "" }, new { @class = "btn btn-success" })
 
 </fieldset>
