--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/AllProducts.cshtml
@@ -1,50 +1,51 @@
-﻿@model IEnumerable<Kaffeplaneten.Models.ProductModel>
+﻿@model List<String>
+
 
 @{
     ViewBag.Title = "Products";
 }
+<div class="btn-group" role="group" aria-label="Kategori">
+    <button type="button" id="Arabica" class="btn btn-default" onclick="hentProdukter(this.id)">Arabica</button>
+    <button type="button" id="Robusta" class="btn btn-default" onclick="hentProdukter(this.id)">Robusta</button>
+    <button type="button" id="Bønner" class="btn btn-default" onclick="hentProdukter(this.id)">Bønner</button>
+    <button type="button" id="Kaffe" class="btn btn-default" onclick="hentProdukter(this.id)">Kaffe</button>
+</div>
 
-    <div class="container">
-        <div class="row">
-            @foreach (var product in Model)
-            {
 
-            <div class="collum">
+<div id="productCanvas">
+    Siden er loaded, men ingen produkter er hentet ut. Velg produktkategori
+</div>
 
-                <div class="col-sm-6 col-md-6">
-                    <div class="thumbnail">
-                        <img img src="~/Content/@product.imageURL" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
-                        <div class="caption">
-                            <h3>@product.productName</h3>
-                            <p>@product.description</p>
+<script type="text/javascript">
+    function hentProdukter(id)
+    {
+        $.getJSON("/Product/hentProdukter", { kategori: id }, function (data) {
+            $('#productCanvas').empty();
+            for (var i in data)
+                {
+                var template = $('#productTemplate').html();
+                    var html = Mustache.to_html(template, data[i])
+                    $('#productCanvas').append(html);
+                   
+                 }
+          });
+    }
+</script>
 
-                        </div>
-                        @Html.ActionLink("Detaljer", "ProductDetailsView", new { id = product.productID }, new { @class = "btn btn-primary" })
-                        @Html.ActionLink("Kjøp", "ProductDetailsView", new { id = product.productID }, new { @class = "btn btn-primary" })
-                    </div>
-                </div>        
-            </div>
-            }
-        </div>
-    </div>
 
-    <div id="myModal" class="modal fade" role="dialog">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Kaffetittel</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Fikse dette her vett, detta er kult</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+<script id="productTemplate" type="text/template">
+        <div id="template" class="col-sm-6 col-md-6">
+            <div id="utRes" class="thumbnail">
+                <img id="image" img src="../../Content/img/{{imageURL}}" alt="ProductImage" data-toggle="modal" data-target="#myModal" style="width:150px;height:150px">
+                <div class="caption">
+                    <h3 id="pName">{{productName}}</h3>
+                    <h2>{{price}},-</h2>
+                    <p id="pDes">{{description}}</p>
                 </div>
             </div>
-
         </div>
-    </div>
+</script>
+
+
+
 
