--- a/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductDetailsView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Product/ProductDetailsView.cshtml
@@ -1,45 +1,9 @@
-﻿@model Kaffeplaneten.Models.ProductModel
+﻿@model IEnumerable<Kaffeplaneten.Models.Products>
 @{
     ViewBag.Title = "ProductDetailsView";
 }
 
-
-<div class="container">
-    <h2>@Html.DisplayFor(model => model.productName)</h2>
-
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="well-lg">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>@Html.LabelFor(model => model.productName)</th>
-                            <th>@Html.LabelFor(model => model.price)</th>
-                            <th>@Html.LabelFor(model => model.stock)</th>
-                            <th>@Html.LabelFor(model => model.category)</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>@Html.DisplayFor(model => model.productName)</td>
-                            <td>@Html.DisplayFor(model => model.productID)</td>
-                            <td>@Html.DisplayFor(model => model.price)</td>
-                            <td>@Html.DisplayFor(model => model.category)</td>
-                        </tr>
-
-                    </tbody>
-
-                </table>
-            </div>
-            <div class="col-sm-8">
-                .col-sm-8
-                @Html.LabelFor(model => model.description)
-                @Html.DisplayFor(model => model.description)
-                <img src="~/Content/@Html.DisplayFor(model => model.imageURL)" class="img-rounded" alt="Product image" width="304" height="236">
-            </div>
-        </div>
-         </div>
-    </div>
+<p>Dette er et partialView</p>
 
 
 
