Merge, helt umulig dette.

--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/ShoppingCartView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/ShoppingCartView.cshtml
@@ -1,63 +1,39 @@
-﻿@using Kaffeplaneten.Controllers;
-@using Kaffeplaneten;
+﻿
 @{
     ViewBag.Title = "ShoppingCartView";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ShoppingCartController currentCart = new ShoppingCartController();
-    currentCart.TESTAddProducts();
-}
-<html>
-    <body>
-        <h2>Shopping Cart:</h2>
-
-        <div class="container">
-            <table id="cart" class="table table-hover table-condensed">
-                <thead>
-                    <tr>
-                        <th style="width:50%">Produkt</th>
-                        <th style="width:10%">Pris pr. Enhet</th>
-                        <th style="width:8%">Antall</th>
-                        <th style="width:22%" class="text-center">Pris</th>
-                        <th style="width:10%"></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var items in currentCart.getShoppingCart().ItemsInShoppingCart)
-                    {
+    <form action ="ShoppingCart/" data-­‐ajax="true" data-­‐ajax-­‐mode="replace" data-­‐ajax-­‐update="#Resultat" method="post">
+        currentCart.TESTAddProducts();
+        }
+        <html>
+        <body>
+            <h2>Shopping Cart:</h2>
+            <div class="container">
+                <table id="cart" class="table table-hover table-condensed">
+                    <thead>
                         <tr>
-                            <td data-th="Product">
-                                <div class="row">
-                                    <div class="col-sm-2 hidden-xs"><img src="~/Content/@items.product.imageURL" alt="..." style="max-height:150px; max-width:100px" class="img-responsive"/></div>
-                                    <div class="col-sm-offset-4">
-                                        <h4 class="nomargin">Product 1</h4>
-                                        <p>@items.product.description</p>
-                                    </div>
-                                </div>
-                            </td>
-                            <td data-th="Price">@items.product.price</td>
-                            <td data-th="Quantity">
-                                <input type="number" class="form-control text-center" value="@items.Quanitity">
-                            </td>
-                            <td data-th="Subtotal" class="text-center">@((items.product.price)*(items.Quanitity))</td>
-                            <td class="actions" data-th="">
-                                <button class="btn btn-info btn-sm"><i class="glyphicon-refresh"></i></button>
-                                <button class="btn btn-danger btn-sm"><i class="glyphicon-trash"></i></button>
-                            </td>
+                            <th style="width:50%">Produkt</th>
+                            <th style="width:10%">Pris pr. Enhet</th>
+                            <th style="width:8%">Antall</th>
+                            <th style="width:22%" class="text-center">Pris</th>
+                            <th style="width:10%"></th>
                         </tr>
-                    }
-                </tbody>
-                <tfoot>
-                    <tr class="visible-xs">
-                        <td class="text-center"><strong>@currentCart.calculateTotal()</strong></td>
-                    </tr>
-                    <tr>
-                        <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i>Continue Shopping</a></td>
-                        <td colspan="2" class="hidden-xs"></td>
-                        <td class="hidden-xs text-center"><strong>Total: @currentCart.calculateTotal()</strong></td>
-                        <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
-                    </tr>
-                </tfoot>
-            </table>
-        </div>
-    </body>
-</html>
+                    </thead>
+                    <tbody>
+                       
+                    </tbody>
+                    <tfoot>
+                        <tr class="visible-xs">
+                            <td class="text-center"><strong>@currentCart.calculateTotal()</strong></td>
+                        </tr>
+                        <tr>
+                            <td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i>Continue Shopping</a></td>
+                            <td colspan="2" class="hidden-xs"></td>
+                            <td class="hidden-xs text-center"><strong>Total: @currentCart.calculateTotal()</strong></td>
+                            <td><a href="#" class="btn btn-success btn-block">Checkout <i class="fa fa-angle-right"></i></a></td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </body>
+    </html>
