--- a/Kaffeplaneten/Kaffeplaneten/Views/User/orderHistoryView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/User/orderHistoryView.cshtml
@@ -13,7 +13,7 @@
         <div class="row">
             <h3>
                 Ordre nummer:
-                @Model.orderNr
+                @o.orderNr
             </h3>
         </div>
         <div class="row">
