--- a/Kaffeplaneten/Kaffeplaneten/Views/Security/Loginview.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Security/Loginview.cshtml
@@ -17,7 +17,7 @@
         <div id="innloggingsboks">
             <div class="editor-label">
                 @Html.LabelFor(userModel => userModel.username)
-            </div>
+            </div>  
             <div class="editor-field">
                 @Html.EditorFor(userModel => userModel.username)
                 @Html.ValidationMessageFor(userModel => userModel.username)
@@ -31,7 +31,7 @@
                 @Html.ValidationMessageFor(userModel => userModel.password)
             </div>
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Logg inn" class="btn btn-success" />
+                <input type="submit" value="Logg inn" onclick="showLogOutBox()"class="btn btn-success">
             </div>
         </div>
 
@@ -41,17 +41,19 @@
               
                  @if(ViewBag.LoggedOn == true)
                 {
-                    <p style="color:blue">Logget inn</p>
-                }
-                else
-                {
+                    <p style="color:blue">Pålogget</p>
+                    
+
+                 }
+                 else
+                 {
                     <p style="color:red">Ikke logget inn</p>
-                }
+                 
+                 }
             </div>
 
             <div>
                 @Html.ActionLink("Innlogget side", "LoggedInPage")<br />
-                @Html.ActionLink("Logg ut", "LoggedOut")<br />
                 @Html.ActionLink("Registrer ny bruker", "createUser", "User")
             </div>
         }
