--- a/Kaffeplaneten/Kaffeplaneten/Views/Order/receiptView.cshtml
+++ b/Kaffeplaneten/Kaffeplaneten/Views/Order/receiptView.cshtml
@@ -8,3 +8,4 @@
 <h2>Kvittering</h2>
 @Html.Partial("OrderView");
 
+@Html.ActionLink("Tilbake", "AllProducts", "Product", new { area = "" }, new { @class = "btn btn-success" })
